--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "repository": "ssh://git.medicuja.de/var/lib/git/text-range-tools.git",
   "main": "./dist/index.js",
   "scripts": {
-    "babel": "babel --presets es2015,stage-0 --ignore node_modules,public",
-    "babel-node": "babel-node --presets es2015,stage-0 --ignore node_modules,public",
-    "sequelize": "node_modules/.bin/sequelize",
     "lint": "eslint lib",
     "clean": "rimraf dist",
     "build:dist": "webpack --config ./webpack.js",
     "build": "npm run clean && npm run build:dist",
-    "test": "cross-env NODE_ENV=test mocha-phantomjs ./test/index.html"
+    "test": "cross-env NODE_ENV=test karma start --single-run",
+    "test:watch": "cross-env NODE_ENV=test karma start",
   },
   "author": "Will Shown <wsn@miamed.de>",
   "license": "UNLICENSED",
@@ -22,12 +20,17 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "cross-env": "^3.1.3",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^1.8.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "webpack": "^1.14.0"
