--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "text-range-tools",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A set of tools for working with text ranges",
-  "repository": "ssh://git.medicuja.de/var/lib/git/text-range-tools.git",
+  "repository": "ssh://git@github.com:amboss-mededu/ui-text-range-tools.git",
   "main": "./dist/index.js",
   "scripts": {
     "lint": "eslint lib",
@@ -45,6 +45,6 @@
     "node": "5.x"
   },
   "dependencies": {
-    "dom-tools": "git+ssh://will@192.237.168.17:6969/home/will/MIAMED/dom-tools.git"
+    "dom-tools": "git+ssh://git@github.com:amboss-mededu/ui-dom-tools.git#v0.1"
   }
 }
