--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "node": "5.x"
   },
   "dependencies": {
-    "dom-tools": "git+ssh://git@github.com:amboss-mededu/ui-dom-tools.git#v0.1"
+    "dom-tools": "amboss-mededu/ui-dom-tools.git#v0.1.1"
   }
 }
